Fixing z-index issues with dropdowns

--- a/app/stylesheets/ui/browser.css
+++ b/app/stylesheets/ui/browser.css
@@ -16,7 +16,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 9998;
+    z-index: 9997;
   }
 
   .browser_controls{
@@ -24,7 +24,7 @@
     top: 0;
     right: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 9998;
     padding: 1.5% 150px 1.5% 1.5%;
     -webkit-box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .4);
     background: #333;
